@@ -18,7 +18,7 @@ $t->get_ok('/')
   ->text_is('div.intro > p > strong', 'KorAP')
   ->content_unlike(qr!onload!)
   ->text_is('#link-guided-tour', 'guided tour')
-  ->text_is('nav > a[href=/doc/korap/kalamar]', 'V 0.47.999')
+  ->text_is('nav > div > a[href=/doc/korap/kalamar]', 'V 0.47.999')
   ->element_exists('select#ql-field option[value=poliqarp]')
   ->element_exists('select#ql-field option[value=cqp]')
   ->element_exists_not('select#ql-field option[value=noliqart]')
